// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse[Base] should render correctly  1`] = `
<div>
  <div
    class="cxmydxc soui-collapse-wrapper"
    style="max-width: 1180px;"
  >
    <div
      class="c2mmhm5 soui-collapseItem-wrapper"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 1
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="c2mmhm5 soui-collapseItem-wrapper c-3oe2j8 soui-collapseItem-active"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 2
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content ccrgq8v soui-collapseItem-expanded"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: block; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="c2mmhm5 soui-collapseItem-wrapper c-lpugym soui-collapseItem-disabled"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="true"
        tabindex="-1"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 3
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="c2mmhm5 soui-collapseItem-wrapper c-3oe2j8 soui-collapseItem-active c-lpugym soui-collapseItem-disabled"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="true"
        tabindex="-1"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 4
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content ccrgq8v soui-collapseItem-expanded"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: block; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse[Base] should render correctly about accordion 1`] = `
<div>
  <div
    class="cxmydxc soui-collapse-wrapper"
    style="max-width: 1180px;"
  >
    <div
      class="c2mmhm5 soui-collapseItem-wrapper"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 1
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="c2mmhm5 soui-collapseItem-wrapper"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 2
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="c2mmhm5 soui-collapseItem-wrapper"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 3
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="c2mmhm5 soui-collapseItem-wrapper"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 4
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse[Base] should render correctly about customize 1`] = `
<div>
  <div
    class="cxmydxc soui-collapse-wrapper"
    style="max-width: 1180px;"
  >
    <div
      class="c2mmhm5 soui-collapseItem-wrapper"
      style="background: rgb(244, 245, 248);"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10.6957 5.75207L16.2694 11.3386C16.6589 11.7289 16.6589 12.3609 16.2694 12.7512L10.7576 18.2751C10.3675 18.6661 9.73435 18.6668 9.3434 18.2767C9.15675 18.0904 9.05121 17.838 9.04974 17.5744L8.98776 6.46395C8.98467 5.91168 9.42988 5.46147 9.98216 5.45839C10.2497 5.4569 10.5067 5.56268 10.6957 5.75207Z"
              fill="#666C7C"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 1
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
          style="background: rgb(255, 255, 255);"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="c2mmhm5 soui-collapseItem-wrapper c-3oe2j8 soui-collapseItem-active"
      style="background: rgb(244, 245, 248);"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10.6957 5.75207L16.2694 11.3386C16.6589 11.7289 16.6589 12.3609 16.2694 12.7512L10.7576 18.2751C10.3675 18.6661 9.73435 18.6668 9.3434 18.2767C9.15675 18.0904 9.05121 17.838 9.04974 17.5744L8.98776 6.46395C8.98467 5.91168 9.42988 5.46147 9.98216 5.45839C10.2497 5.4569 10.5067 5.56268 10.6957 5.75207Z"
              fill="#666C7C"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 2
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content ccrgq8v soui-collapseItem-expanded"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: block; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
          style="background: rgb(255, 255, 255);"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="c2mmhm5 soui-collapseItem-wrapper c-lpugym soui-collapseItem-disabled"
      style="background: rgb(244, 245, 248);"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="true"
        tabindex="-1"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10.6957 5.75207L16.2694 11.3386C16.6589 11.7289 16.6589 12.3609 16.2694 12.7512L10.7576 18.2751C10.3675 18.6661 9.73435 18.6668 9.3434 18.2767C9.15675 18.0904 9.05121 17.838 9.04974 17.5744L8.98776 6.46395C8.98467 5.91168 9.42988 5.46147 9.98216 5.45839C10.2497 5.4569 10.5067 5.56268 10.6957 5.75207Z"
              fill="#666C7C"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 3
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
          style="background: rgb(255, 255, 255);"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse[Base] should render correctly about extra 1`] = `
<div>
  <div
    class="cxmydxc soui-collapse-wrapper"
    style="max-width: 1180px;"
  >
    <div
      class="c2mmhm5 soui-collapseItem-wrapper"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 1
        </div>
        <div
          class="cybm3l6 soui-collapseItem-extra"
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M14 5C14 6.10457 13.1046 7 12 7C10.8954 7 10 6.10457 10 5C10 3.89543 10.8954 3 12 3C13.1046 3 14 3.89543 14 5ZM14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10C13.1046 10 14 10.8954 14 12ZM14 19C14 20.1046 13.1046 21 12 21C10.8954 21 10 20.1046 10 19C10 17.8954 10.8954 17 12 17C13.1046 17 14 17.8954 14 19Z"
              fill="#666C7C"
            />
          </svg>
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="c2mmhm5 soui-collapseItem-wrapper c-3oe2j8 soui-collapseItem-active"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 2
        </div>
        <div
          class="cybm3l6 soui-collapseItem-extra"
        >
          <div
            class="c-rtlffa soui-checkbox-wrapper"
            style="margin: 0px;"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="cj0x93h soui-checkbox-indicator-wrapper"
            >
              <i
                class="cu6lt9i soui-checkbox-indicator"
                data-soui-role="checkbox-indicator"
                tabindex="1"
              />
            </span>
            <span
              class="c-kmc3l2 soui-checkbox-desc"
            >
              checkbox
            </span>
          </div>
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content ccrgq8v soui-collapseItem-expanded"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: block; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="c2mmhm5 soui-collapseItem-wrapper"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 3
        </div>
        <div
          class="cybm3l6 soui-collapseItem-extra"
        >
          <button
            class="c25800a soui-button-primary c9j4dnu soui-button-button"
            dir="ltr"
            type="button"
          >
            <span>
              Button
            </span>
          </button>
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse[Base] should render correctly about icon 1`] = `
<div>
  <div
    style="display: flex; margin-bottom: 16px; align-items: center;"
  >
    <div
      style="width: 80px;"
    >
      Icon:
    </div>
    <div
      class="cmxd0kq soui-radio-group"
    >
      <div
        class="cyirhq6 soui-radio-wrapper c-uazd13 soui-radio-wrapper-checked"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="cmfinsp soui-radio-indicator-wrapper"
        >
          <span
            class="c-7zjjk6 soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="c-xmqy62 soui-radio-desc"
        >
          left
        </span>
      </div>
      <div
        class="cyirhq6 soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="cmfinsp soui-radio-indicator-wrapper"
        >
          <span
            class="c-7zjjk6 soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="c-xmqy62 soui-radio-desc"
        >
          right
        </span>
      </div>
      <div
        class="cyirhq6 soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="cmfinsp soui-radio-indicator-wrapper"
        >
          <span
            class="c-7zjjk6 soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="c-xmqy62 soui-radio-desc"
        >
          none
        </span>
      </div>
    </div>
  </div>
  <div
    style="display: flex; margin-bottom: 16px; align-items: center;"
  >
    <div
      style="width: 80px;"
    >
      Hotspot:
    </div>
    <div
      class="cmxd0kq soui-radio-group"
    >
      <div
        class="cyirhq6 soui-radio-wrapper c-uazd13 soui-radio-wrapper-checked"
      >
        <input
          checked=""
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="cmfinsp soui-radio-indicator-wrapper"
        >
          <span
            class="c-7zjjk6 soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="c-xmqy62 soui-radio-desc"
        >
          header
        </span>
      </div>
      <div
        class="cyirhq6 soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="cmfinsp soui-radio-indicator-wrapper"
        >
          <span
            class="c-7zjjk6 soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="c-xmqy62 soui-radio-desc"
        >
          icon
        </span>
      </div>
      <div
        class="cyirhq6 soui-radio-wrapper"
      >
        <input
          style="display: none;"
          tabindex="0"
          type="radio"
        />
        <span
          class="cmfinsp soui-radio-indicator-wrapper"
        >
          <span
            class="c-7zjjk6 soui-radio-indicator"
            tabindex="1"
          />
        </span>
        <span
          class="c-xmqy62 soui-radio-desc"
        >
          disabled
        </span>
      </div>
    </div>
  </div>
  <div
    class="cxmydxc soui-collapse-wrapper"
    style="max-width: 1180px;"
  >
    <div
      class="c2mmhm5 soui-collapseItem-wrapper"
    >
      <div
        class="c-cbdfx soui-collapseItem-header"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title c4e8sd6 soui-collapseItem-region"
        >
          This is panel header 1
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="c2mmhm5 soui-collapseItem-wrapper"
    >
      <div
        class="c-cbdfx soui-collapseItem-header"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title c4e8sd6 soui-collapseItem-region"
        >
          This is panel header 2
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="c2mmhm5 soui-collapseItem-wrapper"
    >
      <div
        class="c-cbdfx soui-collapseItem-header"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title c4e8sd6 soui-collapseItem-region"
        >
          This is panel header 3
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse[Base] should render correctly about nested panels 1`] = `
<div>
  <div
    class="cxmydxc soui-collapse-wrapper"
    style="max-width: 1180px;"
  >
    <div
      class="c2mmhm5 soui-collapseItem-wrapper c-3oe2j8 soui-collapseItem-active"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 1
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content ccrgq8v soui-collapseItem-expanded"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: block; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          <div
            class="cxmydxc soui-collapse-wrapper"
          >
            <div
              class="c2mmhm5 soui-collapseItem-wrapper c-3oe2j8 soui-collapseItem-active"
            >
              <div
                class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
                data-soui-disabled="false"
                tabindex="0"
              >
                <div
                  class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
                  dir="ltr"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
                    />
                  </svg>
                </div>
                <div
                  class="cyjlfjm soui-collapseItem-title"
                >
                  This is panel nest header 2
                </div>
              </div>
              <div
                class="c-80s6el soui-collapseItem-content ccrgq8v soui-collapseItem-expanded"
                data-sheinx-animation-duration="fast"
                data-sheinx-animation-type="collapse"
                style="display: block; height: 0px; overflow: hidden;"
              >
                <div
                  class="c-7xi87o soui-collapseItem-content-main"
                >
                  Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
                </div>
              </div>
            </div>
            <div
              class="c2mmhm5 soui-collapseItem-wrapper"
            >
              <div
                class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
                data-soui-disabled="false"
                tabindex="0"
              >
                <div
                  class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
                  dir="ltr"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
                    />
                  </svg>
                </div>
                <div
                  class="cyjlfjm soui-collapseItem-title"
                >
                  This is panel nest header 3
                </div>
              </div>
              <div
                class="c-80s6el soui-collapseItem-content"
                data-sheinx-animation-duration="fast"
                data-sheinx-animation-type="collapse"
                style="display: none; height: 0px; overflow: hidden;"
              >
                <div
                  class="c-7xi87o soui-collapseItem-content-main"
                >
                  Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c2mmhm5 soui-collapseItem-wrapper"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 2
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="c2mmhm5 soui-collapseItem-wrapper"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 3
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="c2mmhm5 soui-collapseItem-wrapper"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 4
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse[Base] should render correctly about simple panel 1`] = `
<div>
  <div
    class="cxmydxc soui-collapse-wrapper c-zfl0a0 soui-collapse-border-less"
    style="max-width: 1180px;"
  >
    <div
      class="c2mmhm5 soui-collapseItem-wrapper c-3oe2j8 soui-collapseItem-active c-1y6l4l soui-collapseItem-border-less"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 1
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content ccrgq8v soui-collapseItem-expanded"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: block; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="c2mmhm5 soui-collapseItem-wrapper c-1y6l4l soui-collapseItem-border-less"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 2
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
    <div
      class="c2mmhm5 soui-collapseItem-wrapper c-1y6l4l soui-collapseItem-border-less"
    >
      <div
        class="c-cbdfx soui-collapseItem-header c4e8sd6 soui-collapseItem-region"
        data-soui-disabled="false"
        tabindex="0"
      >
        <div
          class="c-cn09y9 soui-collapseItem-icon c-2l1hb4 soui-collapseItem-active-transform"
          dir="ltr"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.7071 12.7071C17.0676 12.3466 17.0953 11.7794 16.7903 11.3871L16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289C8.93241 5.65338 8.90468 6.22061 9.2097 6.6129L9.29289 6.70711L13.8779 11.2928C14.2683 11.6835 14.2683 12.3165 13.8779 12.7072L9.29289 17.2929C8.93241 17.6534 8.90468 18.2206 9.2097 18.6129L9.29289 18.7071C9.65338 19.0676 10.2206 19.0953 10.6129 18.7903L10.7071 18.7071L16.7071 12.7071Z"
            />
          </svg>
        </div>
        <div
          class="cyjlfjm soui-collapseItem-title"
        >
          This is panel header 3
        </div>
      </div>
      <div
        class="c-80s6el soui-collapseItem-content"
        data-sheinx-animation-duration="fast"
        data-sheinx-animation-type="collapse"
        style="display: none; height: 0px; overflow: hidden;"
      >
        <div
          class="c-7xi87o soui-collapseItem-content-main"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings.
        </div>
      </div>
    </div>
  </div>
</div>
`;
